--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mission 2023</title>
+    <!-- title area -->
+    <title>Mission 2022</title>
+
+    <!-- style link area -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- google font poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
 </head>
 
 <body>
+    <section>
+        <div class="introduction-area">
+            <h1>Stay Focused on Mission 2022</h1>
+            <h2>Hi! I am Alamin Hussain</h2>
+            <h4>and currently i am learning about Web development from The Programming Hero under the guidelines of
+                JHANKAR MAHBUB Sir</h4>
 
+            <a target="_blank" href="#">Explore Now</a>
+
+            <h4>Scroll down to explore more about Me</h4>
+        </div>
+
+        <div class="introduction-area">
+            <img src="images/my-pic-bg.png" alt="Pic of Alamin">
+        </div>
+    </section>
 </body>
 
 </html>
