goals-dream-vission-added

--- a/index.html
+++ b/index.html
@@ -22,18 +22,49 @@
 <body>
     <section>
         <div class="introduction-area">
-            <h1>Stay Focused on Mission 2022</h1>
-            <h2>Hi! I am Alamin Hussain</h2>
-            <h4>and currently i am learning about Web development from The Programming Hero under the guidelines of
-                JHANKAR MAHBUB Sir</h4>
+            <h1>Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
+            <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
+            <h4>and currently i am learning about Web development from The Programming Hero.My dream is to be a senior
+                Web Developer.This journey will not be so easy but i won't give up that easy.Let's do this. </h4>
 
-            <a target="_blank" href="#">Explore Now</a>
+            <a class="button" target="_blank" href="#">Explore Now</a>
 
             <h4>Scroll down to explore more about Me</h4>
         </div>
 
         <div class="introduction-area">
-            <img src="images/my-pic-bg.png" alt="Pic of Alamin">
+            <img src="images/my-pic-bg.png" alt="Picture of Alamin">
+        </div>
+    </section>
+
+    <!-- goals and vission area -->
+    <section>
+        <div>
+            <h1>My Mission in<span class="h1-font-orng">2022</span></h1>
+        </div>
+        <div>
+            <div>
+                <img src="images/illustrator-1.png" alt="">
+                <h2>MISSION</h2>
+                <h4>From now on until i become a Web developer, my only mission is to practice and follow every
+                    instruction
+                    that my instructor give me.And focus in investing my time as much as i can.</h4>
+            </div>
+            <div>
+                <img src="images/illustrator-2.png" alt="">
+                <h2>VISSION</h2>
+                <h4>My vission is to find myself as a Full Stack Web Developer in a repective area in these 2 or 3 year
+                    with
+                    same passion and dedication.And i am working on it.</h4>
+            </div>
+            <div>
+                <img src="images/illustrator-3.png" alt="">
+                <h2>GOALS</h2>
+                <h4>If You Want Something You Never Had, You Have To Do Something You’ve Never Done.So i am doing coding
+                    and
+                    Web development course that i never had.Hopefully i will master it someday.
+                </h4>
+            </div>
         </div>
     </section>
 </body>
