--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <section>
-        <div class="introduction-area">
+    <section id="introduction-box">
+        <div class="half-width">
             <h1>Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
             <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
             <h4>and currently i am learning about Web development from The Programming Hero.My dream is to be a senior
@@ -32,32 +32,38 @@
             <h4>Scroll down to explore more about Me</h4>
         </div>
 
-        <div class="introduction-area">
+        <div class="half-width">
             <img src="images/my-pic-bg.png" alt="Picture of Alamin">
         </div>
     </section>
 
-    <!-- goals and vission area -->
-    <section>
-        <div>
-            <h1>My Mission in<span class="h1-font-orng">2022</span></h1>
-        </div>
-        <div>
-            <div>
+    <!-- goals and vission area start -->
+
+    <section id="goal-box">
+
+        <h1>My Mission in<span class="h1-font-orng">2022</span></h1>
+
+        <div class="dream-box">
+
+            <div id="half-area-color1" class="half-width-area">
                 <img src="images/illustrator-1.png" alt="">
                 <h2>MISSION</h2>
                 <h4>From now on until i become a Web developer, my only mission is to practice and follow every
                     instruction
                     that my instructor give me.And focus in investing my time as much as i can.</h4>
             </div>
-            <div>
+
+
+            <div id="half-area-color2" class="half-width-area">
                 <img src="images/illustrator-2.png" alt="">
                 <h2>VISSION</h2>
                 <h4>My vission is to find myself as a Full Stack Web Developer in a repective area in these 2 or 3 year
                     with
                     same passion and dedication.And i am working on it.</h4>
             </div>
-            <div>
+
+
+            <div id="half-area-color3" class="half-width-area">
                 <img src="images/illustrator-3.png" alt="">
                 <h2>GOALS</h2>
                 <h4>If You Want Something You Never Had, You Have To Do Something You’ve Never Done.So i am doing coding
@@ -65,8 +71,11 @@
                     Web development course that i never had.Hopefully i will master it someday.
                 </h4>
             </div>
+
         </div>
+
     </section>
+
 </body>
 
 </html>
