--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <section id="introduction-box">
+    <section class="quotes-box">
         <div class="half-width">
             <h1>Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
             <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
@@ -74,6 +74,23 @@
 
         </div>
 
+    </section>
+
+    <section class="quotes-box">
+
+        <div id="coding-image" class="half-width">
+            <img src="images/coding.png" alt="">
+        </div>
+
+        <div>
+            <h1>Develop Without Limits</h1>
+            <h4>
+                A winner is someone who recognizes his God-given talents, works his tail off to develop them into
+                skills, and uses these skills to accomplish his goals.Develop a passion for learning. If you do, you
+                will never cease to grow.
+            </h4>
+            <a class="button" target="_blank" href="#">Read the Documentation</a>
+        </div>
     </section>
 
 </body>
