border-slice-added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <section class="quotes-box">
         <div class="half-width">
-            <h1>Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
+            <h1 id="border-slice">Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
             <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
             <h4>and currently i am learning about Web development from The Programming Hero.My dream is to be a senior
                 Web Developer.This journey will not be so easy but i won't give up that easy.Let's do this. </h4>
@@ -38,6 +38,8 @@
     </section>
 
     <!-- goals and vission area start -->
+
+
 
     <section id="goal-box">
 
@@ -78,7 +80,7 @@
 
     <section class="quotes-box">
 
-        <div id="coding-image" class="half-width">
+        <div class="half-width">
             <img src="images/coding.png" alt="">
         </div>
 
