--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
 
     </section>
 
+
+
+
     <section class="quotes-box">
 
         <div class="half-width">
             <img src="images/coding.png" alt="">
         </div>
 
-        <div>
+        <div class="half-width">
             <h1>Develop Without Limits</h1>
             <h4>
                 A winner is someone who recognizes his God-given talents, works his tail off to develop them into
@@ -93,6 +96,29 @@
             </h4>
             <a class="button" target="_blank" href="#">Read the Documentation</a>
         </div>
+    </section>
+
+    <section class="quotes-box">
+        <div class="half-width">
+            <h1>Know Our Global Community</h1>
+            <h4>The people or nations of the world, considered as being closely connected by modern telecommunications
+                and
+                as being economically, socially, and politically interdependent The term world community is used
+                primarily
+                in political and humanitarian contexts to describe an international aggregate of nation states of widely
+                varying types. In most connotations, the term is used to convey meanings attached to consensus or
+                inclusion
+                of all people in all lands and their governments </h4>
+
+            <a class="button" target="_blank" href="#">Read the Documentation</a>
+        </div>
+
+
+
+        <div class="half-width">
+            <img src="images/project.png" alt="">
+        </div>
+
     </section>
 </body>
 
