--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-    <section id="goal-box">
+    <section class="goal-box">
 
         <h1>My Mission in<span class="h1-font-orng">2022</span></h1>
 
@@ -119,6 +119,36 @@
             <img src="images/project.png" alt="">
         </div>
 
+    </section>
+
+
+
+    <section class="goal-box">
+
+        <h1> Get in Touch</h1>
+
+        <div class="quotes-box">
+            <div id="form-area" class="half-width">
+                <form action="">
+                    <label for="fname">First name: </label>
+                    <input type="text" name="fname" id="">
+                    <br>
+                    <label for="lname">Last name: </label>
+                    <input type="text" name="lname" id="">
+                    <br>
+                    <label for="email">Email: </label>
+                    <input type="email" name="email" id="">
+                </form>
+
+                <textarea name="Message" id="" cols="50" rows="5">Message</textarea>
+                <br>
+                <button>Submit</button>
+            </div>
+
+            <div class="half-width">
+                <img src="images/ask-me.png" alt="">
+            </div>
+        </div>
     </section>
     <footer>
         <h1>Mission<span class="h1-font-orng">2022</span></h1>
