--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <section class="quotes-box">
+    <section class="flexible-box">
         <div class="half-width">
             <h1 id="border-slice">Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
             <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
@@ -81,7 +81,7 @@
 
 
 
-    <section class="quotes-box">
+    <section class="flexible-box">
 
         <div class="half-width">
             <img src="images/coding.png" alt="">
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="quotes-box">
+    <section class="flexible-box">
         <div class="half-width">
             <h1>Know Our Global Community</h1>
             <h4>The people or nations of the world, considered as being closely connected by modern telecommunications
@@ -121,35 +121,30 @@
 
     </section>
 
-
-
     <section class="goal-box">
 
-        <h1> Get in Touch</h1>
+        <h1>Get in Touch</h1>
 
-        <div class="quotes-box">
-            <div id="form-area" class="half-width">
-                <form action="">
-                    <label for="fname">First name: </label>
-                    <input type="text" name="fname" id="">
-                    <br>
-                    <label for="lname">Last name: </label>
-                    <input type="text" name="lname" id="">
-                    <br>
-                    <label for="email">Email: </label>
-                    <input type="email" name="email" id="">
-                </form>
-
-                <textarea name="Message" id="" cols="50" rows="5">Message</textarea>
-                <br>
-                <button>Submit</button>
+        <div class="flexible-box">
+            <div class="half-width">
+                <h2>Ask About Us</h2>
+                <hr>
+                <p>
+                    “Do not let arrogance go to your head and despair to your heart; do not let compliments go to your
+                    head and criticisms to your heart; do not let success go to your head and failure to your heart.”
+                    ― Roy T. Bennett, The Light in the Heart <br>
+                    So feel free to express your thoughts and ideas, we will hear you and try to improve our system or
+                    facilities.
+                </p>
             </div>
 
             <div class="half-width">
-                <img src="images/ask-me.png" alt="">
+                <img src="images/question.png" alt="">
             </div>
         </div>
     </section>
+
+
     <footer>
         <h1>Mission<span class="h1-font-orng">2022</span></h1>
         <p>Hard work, Perseverance, and Determination for 2022 By Alamin</p>
