--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <!-- fav icon area -->
     <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
 </head>
 
 <body>
+
+    <!-- introduction area start -->
+
     <section class="flexible-box">
         <div class="half-width">
             <h1 id="border-slice">Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
@@ -37,9 +41,10 @@
         </div>
     </section>
 
+    <!-- introduction area end -->
+
+
     <!-- goals and vission area start -->
-
-
 
     <section class="goal-box">
 
@@ -78,8 +83,10 @@
 
     </section>
 
+    <!-- goal and vission area end -->
 
 
+    <!-- document area start -->
 
     <section class="flexible-box">
 
@@ -97,6 +104,12 @@
             <a class="button" target="_blank" href="#">Read the Documentation</a>
         </div>
     </section>
+
+    <!-- document area end -->
+
+
+
+    <!-- community area start -->
 
     <section class="flexible-box">
         <div class="half-width">
@@ -120,15 +133,21 @@
         </div>
 
     </section>
+    <!-- community area end -->
+
+
+
+    <!-- about us area start -->
 
     <section class="goal-box">
 
         <h1>Get in Touch</h1>
+        <hr>
 
         <div class="flexible-box">
             <div class="half-width">
                 <h2>Ask About Us</h2>
-                <hr>
+
                 <p>
                     “Do not let arrogance go to your head and despair to your heart; do not let compliments go to your
                     head and criticisms to your heart; do not let success go to your head and failure to your heart.”
@@ -136,6 +155,8 @@
                     So feel free to express your thoughts and ideas, we will hear you and try to improve our system or
                     facilities.
                 </p>
+                <h4>Email: alaminhussain32@gmail.com</h4>
+
             </div>
 
             <div class="half-width">
@@ -144,11 +165,14 @@
         </div>
     </section>
 
+    <!-- about us area end -->
 
+    <!-- footer area start -->
     <footer>
         <h1>Mission<span class="h1-font-orng">2022</span></h1>
         <p>Hard work, Perseverance, and Determination for 2022 By Alamin</p>
     </footer>
+    <!-- footer area end -->
 </body>
 
 </html>
