--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
     <!-- document area start -->
 
-    <section class="flexible-box">
+    <section id="develop-box" class="flexible-box">
 
         <div class="half-width">
             <img src="images/coding.png" alt="">
         </div>
 
         <div class="half-width">
-            <h1>Develop Without Limits</h1>
+            <h1>Develop Without <span class="h1-font-orng">Limits</span></h1>
             <h4>
                 A winner is someone who recognizes his God-given talents, works his tail off to develop them into
                 skills, and uses these skills to accomplish his goals.Develop a passion for learning. If you do, you
@@ -111,9 +111,9 @@
 
     <!-- community area start -->
 
-    <section class="flexible-box">
+    <section id="community-box" class="flexible-box">
         <div class="half-width">
-            <h1>Know Our Global Community</h1>
+            <h1>Know Our Global <span class="h1-font-orng">Community</span></h1>
             <h4>The people or nations of the world, considered as being closely connected by modern telecommunications
                 and
                 as being economically, socially, and politically interdependent The term world community is used
@@ -139,28 +139,28 @@
 
     <!-- about us area start -->
 
-    <section class="goal-box">
+    <section id="about-box" class="goal-box">
 
-        <h1>Get in Touch</h1>
+        <h1 class="h1-font-blue">Get in Touch</h1>
         <hr>
 
-        <div class="flexible-box">
+        <div class="flexible-box ">
             <div class="half-width">
-                <h2>Ask About Us</h2>
+                <h2 class="h1-font-blue">Ask About Us</h2>
 
                 <p>
-                    “Do not let arrogance go to your head and despair to your heart; do not let compliments go to your
+                <h4> “Do not let arrogance go to your head and despair to your heart; do not let compliments go to your
                     head and criticisms to your heart; do not let success go to your head and failure to your heart.”
                     ― Roy T. Bennett, The Light in the Heart <br>
                     So feel free to express your thoughts and ideas, we will hear you and try to improve our system or
-                    facilities.
+                    facilities.</h4>
                 </p>
                 <h4>Email: alaminhussain32@gmail.com</h4>
 
             </div>
 
             <div class="half-width">
-                <img src="images/question.png" alt="">
+                <img src="images/about-us-icon-34435.gif" alt="">
             </div>
         </div>
     </section>
