--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!-- fav icon area -->
-    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/about-us-icon-34435.gif" type="image/x-icon">
 </head>
 
 <body>
@@ -29,7 +29,8 @@
             <h1 id="border-slice">Stay Focused on<span class="h1-font-orng">Mission 2022</span></h1>
             <h2>Hi! I am<span class="h1-font-orng name">Alamin Hussain</span></h2>
             <h4>and currently i am learning about Web development from The Programming Hero.My dream is to be a senior
-                Web Developer.This journey will not be so easy but i won't give up that easy.Let's do this. </h4>
+                Web Developer.This journey will not be so easy but i won't give up that easy.Let's do this.
+            </h4>
 
             <a class="button" target="_blank" href="#">Explore Now</a>
 
@@ -159,8 +160,18 @@
 
             </div>
 
-            <div class="half-width">
-                <img src="images/about-us-icon-34435.gif" alt="">
+            <div>
+                <form id="form-box">
+
+
+                    <input class="form" type="text" placeholder="First Name">
+                    <input class="form" type="text" placeholder="Last Name">
+                    <input class="form" type="email" placeholder="Email">
+                    <textarea class="form" name="" id="" cols="50" rows="10"
+                        placeholder="Message here......"></textarea>
+                    <button class="button" type="submit">SUBMIT</button>
+
+                </form>
             </div>
         </div>
     </section>
