contact-pic-added

--- a/index.html
+++ b/index.html
@@ -147,17 +147,7 @@
 
         <div class="flexible-box ">
             <div class="half-width">
-                <h2 class="h1-font-blue">Ask About Us</h2>
-
-                <p>
-                <h4> “Do not let arrogance go to your head and despair to your heart; do not let compliments go to your
-                    head and criticisms to your heart; do not let success go to your head and failure to your heart.”
-                    ― Roy T. Bennett, The Light in the Heart <br>
-                    So feel free to express your thoughts and ideas, we will hear you and try to improve our system or
-                    facilities.</h4>
-                </p>
-                <h4>Email: alaminhussain32@gmail.com</h4>
-
+                <img src="images/undraw_mailbox_re_dvds.svg" alt="">
             </div>
 
             <div>
